<resources>
    <string name="app_name">MyApp</string>
    <string name="login">Login</string>
    <string name="hint_mail">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="repeat_password">Repeat Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>