<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="409dp"
        android:layout_height="231dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background_auth" />

    <EditText
        android:id="@+id/edMail"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPhone" />

    <EditText
        android:id="@+id/edPW"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edMail" />

    <EditText
        android:id="@+id/edPW2"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPW" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="357dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPW2" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/already_have_an_account_login_here"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="12dp"
        android:text="Sign up"
        android:textAlignment="center"
        android:textColor="#1F5E22"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />


</androidx.constraintlayout.widget.ConstraintLayout>